--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
 cryptography>=3.4.0
 quantcrypt
+# PyNaCl is optional - our cross-platform secure memory implementation provides an alternative
+PyNaCl
 keyring>=23.0.0
 pyzmq>=22.0.0
+WMI; sys_platform == "win32"
+dnspython>=2.3.0
+requests>=2.28.0
+
+# PKCS#11 is only needed for non-Windows platforms
 python-pkcs11; sys_platform != "win32"
+
+# DANE and Certificate Transparency dependencies
+pyopenssl>=23.0.0
+python-dateutil>=2.8.2
+pyjwt>=2.6.0
   
+liboqs-python>=0.8.0
