--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 cryptography
 quantcrypt
-# PyNaCl is optional - our cross-platform secure memory implementation provides an alternative
+# PyNaCl is optional - our cross‑platform secure memory implementation provides an alternative
 PyNaCl
 keyring
 pyzmq
@@ -8,13 +8,13 @@ WMI; sys_platform == "win32"
 dnspython
 requests
 
-# PKCS#11 is only needed for non-Windows platforms
+# PKCS#11 is only needed for non‑Windows platforms
 python-pkcs11; sys_platform != "win32"
 
 # DANE and Certificate Transparency dependencies
 pyopenssl
 python-dateutil
 pyjwt
-  
+
 liboqs-python
-pyspx; sys_platform != "win32" # For SPHINCS+ quantum-resistant signatures
+
