--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,17 @@
-cryptography
-cffi
-pycryptodome
-quantcrypt
-dnspython
-keyring
-psutil
-#tpm2-pytss==2.0.0; platform_system == "Linux"
-wmi
-liboqs-python
-
-# PyNaCl is optional - our cross‑platform secure memory implementation provides an alternative
-PyNaCl
-
-pyzmq
-requests 
-
-# PKCS#11 support for all platforms
-python-pkcs11
-
-# DANE and Certificate Transparency dependencies
-python-dateutil
-pyjwt
-
+ cryptography==45.0.5
+ cffi==1.17.1
+ pycryptodome==3.23.0
+ quantcrypt==1.0.1
+ dnspython==2.7.0
+ keyring==25.6.0
+ psutil==7.0.0
+ wmi==1.5.1
+- liboqs-python
++ # liboqs-python has no PyPI release; install bindings from GitHub or use:
++ # pip install pyoqs-sdk==1.0
+ PyNaCl==1.5.0
+ pyzmq==27.0.0
+ requests==2.32.4
+ python-pkcs11==0.8.1
+ python-dateutil==2.9.0.post0
+ PyJWT==2.10.1
